--- a/kwitter_page.html
+++ b/kwitter_page.html
@@ -18,7 +18,7 @@
 <body>
 
 <div class="container">
-	<button id="logout" onclick="logout()" class="glyphicon glyphicon-log-out btn btn-danger">Logout</button>
+	<button id="logout" onclick="logout();" class="glyphicon glyphicon-log-out btn btn-danger">Logout</button>
 	<center>
 		<h1 class="header">	
 			Kwitter	
@@ -37,7 +37,7 @@
 		<button onclick="send()" class="btn btn-success">Send</button>
 	</div>
 </center>
-
+<script src="kwitter.js"></script>
 <script src="kwitter_page.js"></script>
 </body>
 </html>
